--- a/src/components/chat/chatForm/Notification.scss
+++ b/src/components/chat/chatForm/Notification.scss
@@ -1,121 +1,3 @@
-@media screen and (min-width: 1200px){
-  .user-notification{
-    height: 10vh;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 4vh;
-    margin-top: 1vh;
-    padding-left: 1vh;
-  }
-  .user-notification:hover{
-    background-color: #f9fafc;
-    border-color: #f9fafc;
-  }
-
-  .use-flex-1{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin-bottom: 2vh;
-  }
-
-  .user-notification-1{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-  }
-
-  .essaie{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    margin: 4vh;
-  }
-
-  .style-nom{
-    display: flex;
-    justify-content: space-between;
-    margin-left: -5vh;
-  }
-
-  .nom-user{
-    opacity: 0.7;
-    color: black;
-    font-size: 2.1vh;
-  }
-  .nom-user-1{
-    opacity: 0.5;
-  }
-
-  .icon-size{
-    size: 50vh;
-  }
-}
-
-@media screen and (max-width: 1199px) and (min-width: 992px){
-  .user-notification{
-    height: 12vh;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    margin: 4vh;
-    padding-top: 3%;
-    padding-left: 1vh;
-  }
-
-  .use-flex-1{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin-bottom: 2vh;
-  }
-
-  .user-notification-1{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-  }
-
-  .essaie{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    margin: 4vh;
-  }
-
-  .style-nom{
-    display: flex;
-    justify-content: space-between;
-    margin-left: -5vh;
-  }
-
-  .nom-user{
-    margin-top: 0.75vh;
-    opacity: 0.7;
-    color: black;
-    font-size: 2.5vh;
-  }
-
-  .nom-user-1{
-    opacity: 0.5;
-    margin-top: 1vh;
-  }
-
-  .icon-size{
-    size: 30vh;
-  }
-}
-
-@media screen and (max-width: 991px) and (min-width: 768px) {
-
-}
-
-@media screen and (max-width: 767px) {
-
-}
-
 @media screen {
   .user-notification:hover{
     background-color: #f9fafc;
@@ -129,4 +11,161 @@
     border-color: #f9fafc;
   }
 }
+
+@media screen and (min-width: 1200px){
+  .user-notification{
+    margin: 2vh;
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .user-notification-1{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+  }
+
+  .user-notification-2{
+    width: 10%;
+  }
+
+  .icon-size-1{
+    width: 20%;
+  }
+
+  .nom-chat{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 80%;
+  }
+
+  .nom-user{
+    font-size: 2.4vh;
+  }
+
+  .nom-user-1{
+    font-size: 1.8vh;
+  }
+}
+
+@media screen and (max-width: 1199px) and (min-width: 992px){
+  .user-notification{
+    margin: 2vh;
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .user-notification-1{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+  }
+
+  .user-notification-2{
+    width: 10%;
+  }
+
+  .icon-size-1{
+    width: 15%;
+  }
+
+  .nom-chat{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 70%;
+  }
+
+  .nom-user{
+    font-size: 2vh;
+  }
+
+  .nom-user-1{
+    font-size: 1.6vh;
+  }
+}
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+  .user-notification{
+    margin: 1vh;
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .user-notification-1{
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+  }
+
+  .user-notification-2{
+    width: 10%;
+  }
+
+  .icon-size-1{
+    width: 10%;
+  }
+
+  .nom-chat{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 70%;
+  }
+
+  .nom-user{
+    font-size: 1.8vh;
+  }
+
+  .nom-user-1{
+    font-size: 1.4vh;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .user-notification{
+    margin: 1vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .user-notification:hover{
+    padding-bottom: 1vh;
+  }
+
+  .user-notification-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+  }
+
+  .nom-chat{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+  }
+
+  .nom-user{
+    font-size: 1.8vh;
+  }
+
+  .nom-user-1{
+    font-size: 1.4vh;
+  }
+}
+
+
 
