--- a/src/components/chat/menu/Menu1.scss
+++ b/src/components/chat/menu/Menu1.scss
@@ -59,13 +59,208 @@
 }
 
 @media screen and (max-width: 1199px) and (min-width: 992px) {
+  .menu-principal-add{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 100%;
+    height: 12vh;
+    margin-top: 2vh;
+    padding-top: 3.5vh;
+    background-color: blue;
+  }
 
+  .menu-1-add{
+    width: 31.4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .menu-11-add{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+
+  }
+
+  .menu-2-add{
+    width: 80.3%;
+    height: 8.5vh;
+    background-color: #f4f5f8;
+    border-radius: 2vh 2vh 0vh 0vh;
+  }
+  .menu-31-add{
+    width: 24.8%;
+    display: flex;
+    justify-content: center;
+    margin-top: 2vh;
+  }
+
+  .chat-details{
+    margin-top: 1vh;
+    width: 95%;
+    font-size: 2.1vh;
+  }
+
+  .back-arrow{
+    margin-left: 2.5vh;
+    width: 30%;
+  }
+
+  .bar{
+    width: 100%;
+    margin-left: -5vh;
+  }
+  .messenger-logo-add{
+    margin-left: 4vh;
+  }
 }
 
 @media screen and (max-width: 991px) and (min-width: 768px) {
+  .menu-principal-add{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 100%;
+    height: 12vh;
+    margin-top: 2vh;
+    padding-top: 3.5vh;
+    background-color: red;
+  }
+
+  .menu-1-add{
+    width: 31.4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .menu-11-add{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+
+  }
+
+  .menu-2-add{
+    width: 80.3%;
+    height: 8.5vh;
+    background-color: #f4f5f8;
+    border-radius: 2vh 2vh 0vh 0vh;
+  }
+  .menu-31-add{
+    width: 24.8%;
+    display: flex;
+    justify-content: center;
+    margin-top: 2vh;
+  }
+
+  .chat-details{
+    margin-top: 1vh;
+    width: 95%;
+    font-size: 1.8vh;
+  }
+
+  .back-arrow{
+    margin-left: 2.5vh;
+    width: 45%;
+  }
+
+  .bar{
+    width: 100%;
+    margin-left: -5vh;
+  }
+  .messenger-logo-add{
+    margin-left: 4vh;
+  }
+  .size-back-add{
+    width: 4.75vh;
+    height: 4.75vh;
+  }
 
 }
 
 @media screen and (max-width: 767px) {
+  .menu-principal-add{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 100%;
+    height: 15vh;
+    align-items: center;
+    margin-top: 2vh;
+    padding-top: 3.5vh;
+  }
 
+  .menu-1-add{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .menu-11-add{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .menu-2-add{
+    width: 65%;
+    height: 11.5vh;
+    background-color: #f4f5f8;
+    border-radius: 2vh 2vh 0vh 0vh;
+  }
+  .menu-31-add{
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 2vh;
+  }
+
+  .chat-details{
+    margin-top: 1vh;
+    font-size: 1.7vh;
+    width: 70%;
+  }
+
+  .back-arrow{
+  }
+
+  .bar{
+    width: 110%;
+    margin-left: -10vh;
+    height: 2vh;
+  }
+
+  .messenger-logo-add{
+    margin-left: 4vh;
+  }
+
+  .messenger-message{
+    opacity: 0.5;
+    color: blue;
+    font-weight: bold;
+    font-size: 2.2vh;
+  }
+
+  .messenger-open{
+    color: gray;
+    float: right;
+    opacity: 0.3;
+    font-weight: bold;
+  }
+
+  .size-back-add{
+    width: 4.5vh;
+    height: 4.5vh;
+  }
 }
